--- a/src/components/Cta.astro
+++ b/src/components/Cta.astro
@@ -14,14 +14,14 @@ const {
 		<p class="text-lg mb-8">{subtitle}</p>
 
 		<div class="flex flex-col justify-center gap-4">
-			<a href="tel:616-315-0999" class="btn btn-primary text-lg py-2 w-full max-w-xs mx-auto ">
-				<Phone />
-				<p>Talk to a Pro</p>
-			</a>
-            <a href="/instant-quote/?step=1" class="btn btn-outline text-lg w-full max-w-xs py-2 mx-auto">
+			<a href="/instant-quote/?step=1" class="btn btn-outline text-lg w-full max-w-xs py-2 mx-auto">
                 <PriceReceipt />
                 <p class="">Get My Instant Quote</p>
             </a>
+			<a href="tel:616-315-0999" class="btn btn-primary text-lg py-2 w-full max-w-xs mx-auto ">
+				<Phone />
+				<p class="text-white">616-315-0999</p>
+			</a>
 		</div>
 
 		<p class="mt-6 text-sm text-gray-500">No commitment. No pressure. Just fast, timely help when you need it.</p>
