--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -23,55 +23,63 @@ import CalendarClock from './icons/CalendarClock.astro';
             max-w-5xl
             mx-auto
             py-6
-            xs:pt-12
-            xs:pb-10
+            xs:pt-8
+            xs:pb-0
             md:py-20
             text-base-content
             text-center
             "
         >
             <div id="hero-section" class="p-4 flex flex-col flex-shrink-0 rounded-lg">
-	<h1 class="text-xl xs:text-2xl sm:text-4xl font-bold leading-tight mb-3">
-		Need your Water Heater Replaced Fast?
-	</h1>
+				<h1 class="text-xl xs:text-2xl sm:text-4xl font-bold leading-tight mb-2">
+					Tired of Waiting on a Salesman For a Water Heater Replacement Price?
+				</h1>
+				<p class="text-lg sm:text-2xl mb-4">
+					Skip the sales visit. Get an <span class="font-bold text-primary">Exact Installed Price</span> in 30 seconds.
+				</p>
 
-	<p class="text-xl xs:text-2xl sm:text-4xl font-semibold leading-tight mb-3">
-		Get your instant quote now. <br> Appointments as soon as today.
-	</p>
+				<a  href="/instant-quote/?step=1" class="btn btn-primary text-lg text-white py-2 w-72 max-w-xs mx-auto mb-2">
+					<PriceReceipt />
+					<p>Get My Instant Quote Now</p>
+				</a>
+				<p class="text-xs sm:text-sm opacity-75 mb-8">
+					All-Inclusive • No Surprise Fees • Same-Day Service
+				</p>
 
-	<p class="text-xl xs:text-2xl sm:text-4xl font-semibold leading-tight">
-		Tanks: <span class="text-primary">from $1,595 installed</span>
-	</p>
-	<p class="text-xl xs:text-2xl sm:text-4xl font-semibold leading-tight mb-4">
-		Tankless: <span class="text-primary">from $3,495 installed</span>
-	</p>
+				<ul class="text-left mx-auto pr-2 mb-8">
+					<p class="font-semibold sm:text-2xl mb-">
+						Why Choose Us?
+					</p>
+					<li class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto">
+						• Locally Owned
+					</li>
+					<li class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto">
+						• No Commissions
+					</li>
+					<li class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto">
+						• Price Lock Guarantee
+					</li>
+					<li class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto">
+						• 2-Year Labor Warranties
+					</li>
+					<li class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto">
+						• Same-Day & Next-Day Installs
+					</li>
+					<li class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto">
+						• Licensed & Insured West Michigan Pros
+					</li>
+				</ul>
 
-	<p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto">
-		No in-home sales visit needed. No commission-based techs. Just transparent pricing and fast scheduling for what you need.
-	</p>
+				<p class="mb-2 sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto">Speak to a water heater specialist now.</p>
+				<a href="tel:616-315-0999" class="btn btn-primary text-lg text-white py-2 w-72 max-w-xs mx-auto mb-4">
+					<Phone />
+					<p>616-315-0999</p>
+				</a>
 
-	<p class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto mb-6">
-		Fast • Fair • No Commissions
-	</p>
-
-	<a href="/instant-quote/?step=1" class="btn btn-primary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
-		<PriceReceipt />
-		<p>Get My Instant Quote</p>
-	</a>
-
-	<a href="tel:616-315-0999" class="btn btn-outline text-lg bg-white/50 text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
-		<Phone />
-		<p>Talk to a Pro</p>
-	</a>
-
-	<p class="text-sm opacity-70 mt-2">
-		Them: high-pressure sales. Us: your price upfront.
-	</p>
-
-                <!-- <a aria-label="Book Now" href="/pricing/" class="btn btn-outline text-lg bg-white/50 text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
-                    <CalendarClock />
-                    <p>Ready To Schedule?</p>
-                </a> -->
+				<!-- <a aria-label="Book Now" href="/pricing/" class="btn btn-outline text-lg bg-white/50 text-black py-2 w-72 max-w-xs mx-auto mb-4 shadow-sm">
+					<CalendarClock />
+					<p>Ready To Schedule?</p>
+				</a> -->
             </div>
         </div>
         <div class="px-4 text-base-content text-center">
